# DungeonJournal

./: .gitignore  README.md  TODO.md  io.github.trytonvanmeer.DungeonJournal.Devel.json  io.github.trytonvanmeer.DungeonJournal.json  io.github.trytonvanmeer.DungeonJournal.yaml  io.github.trytonvanmeer.Roru.json  meson.build  meson_post_install.py
.github/workflows/: flatpak.yml
build-aux/: meson_post_install.py
data/: dungeonjournal.css  dungeonjournal.gresource.xml  io.github.trytonvanmeer.DungeonJournal.appdata.xml.in  io.github.trytonvanmeer.DungeonJournal.desktop.in  io.github.trytonvanmeer.DungeonJournal.gschema.xml  io.github.trytonvanmeer.Roru.appdata.xml.in  io.github.trytonvanmeer.Roru.desktop.in  meson.build  roru.gresource.xml
data/ui/: AppWindow.ui  ApplicationWindow.ui  CharacterAttackRow.ui  CharacterExpandingRow.ui  CharacterFeatRow.ui  CharacterInfoPage.ui  CharacterInventoryPage.ui  CharacterItemRow.ui  CharacterSkillRow.ui  CharacterSkillsPage.ui  ComboBoxRow.ui  EntryRow.ui  ExpanderRow.ui  RecentsCharacterRow.ui  ShortcutsWindow.ui  SpinButtonCheckboxRow.ui  SpinButtonRow.ui  StartupPage.ui  StartupWindow.ui  Window.ui  character-info-view.ui  character-view.ui  window.ui
data/ui/character/: ability-skills.ui  ability_skills.ui  background.ui  features.ui  info.ui  stats.ui
data/ui/widget/: ability-score.ui  ability-skill.ui  ability_skill.ui  character-entry-adjustment.ui  character-entry-text-view.ui  character_entry.ui  character_entry_adjustment.ui
po/: POTFILES  POTFILES.in  meson.build
src/: Application.vala  CharacterAttack.vala  CharacterFeat.vala  CharacterInfoPage.vala  CharacterItem.vala  CharacterSheet.vala  CharacterSkillsPage.vala  Settings.vala  Util.vala  Window.vala  meson.build
src/View/: CharacterAbilitySkillView.vala  CharacterBackgroundView.vala  CharacterFeaturesView.vala  CharacterInfoView.vala  CharacterStatsView.vala  CharacterView.vala
src/Widget/: AbilityScore.vala  AbilitySkill.vala  CharacterEntry.vala  CharacterEntryAdjustment.vala  CharacterEntryTextView.vala
src/Window/: ShortcutsWindow.vala
src/ui/: AppWindow.vala  ApplicationWindow.vala  CharacterAttackRow.vala  CharacterExpandingRow.vala  CharacterFeatRow.vala  CharacterInfoPage.vala  CharacterInventoryPage.vala  CharacterItemRow.vala  CharacterRowInterface.vala  CharacterSkillRow.vala  CharacterSkillsPage.vala  ComboBoxRow.vala  EntryRow.vala  ExpanderRow.vala  RecentsCharacterRow.vala  SeparatorRow.vala  ShortcutsWindow.vala  SpinButtonCheckboxRow.vala  SpinButtonRow.vala  StartupPage.vala  StartupWindow.vala
src/vapis/: config.vapi
src/widget/: CharacterFeatRow.vala  ComboBoxRow.vala  EntryRow.vala  SeparatorRow.vala  SpinButtonCheckboxRow.vala  SpinButtonRow.vala
vapi/: config.vapi
